1.20 (in cvs)
--------------
 - new rendering pipeline based on a new shader
 - better interactivity with density threshold
 - faster rendering according to density threshold
 - new: add hotkeys to autorotate around x,y,z axis counter clockwise
 - new: add lmin value for ramses amr file
 - fix bug on histogram display if phys value<0
 - fix bug on ramses data loading

1.11 (February, 24th 2011)
----------------------------
 - happy gcc 4.5.x
 - fix a segmentation fault on intel gpu
 - huge speedup for phiGRAPE snapshot loading (x5 !)
 - MacOs gyrfalcON plugin updated and fixed
 - selected particles saved by their IDs now

1.1 (October, 27th 2010)
------------------------
 - change text rendering engine, it's based on PLIB now, and allows to properly
   display OSD during off-screen rendering
   (PLIB : see http://plib.sourceforge.net/)
 - fix an issue on shader program with NVIDIA 260.19.12 driver. ( glPointsize
   is no more used, it has been replaced by a uniform texture factor variable)
 - add a new tab in Options dialog box to control On Screen Display
 - use widget->setStyleSheet to set color and to be platform independant
 - fix a bug when reading multiple gadget files

1.0 (July, 28th 2010)
---------------------
 - release number has changed, this is the 1.0 release !!!	
 - add a new tab in Options dialog box to manage grid and cube display	
 - if "screenshot" parameter used from the command line, image will be
   saved in the correct file format according to the extension name
 - bug fixed: bestzoom deactivated for the first playing frame 
 - bug fixed: if only particles are selected, a modification of the
	     density threshold modify now the color of the particles
 - bug fixed: display the correct number of particles selected from
	     the mouse in the Form Option box
 - bug fixed: display velocities vectors when selected from the cli
	
	
	
preview.2010-May-19 (aka Leiden Release)
-----------------------------------------